--- a/atividades/atividade005_bootstrap/css/estilo.css
+++ b/atividades/atividade005_bootstrap/css/estilo.css
@@ -13,3 +13,17 @@ body {
     min-height: 100vh;
 }
 
+#carousel .carousel-item img {
+  max-height: 400px;
+  object-fit: cover;
+}
+
+.card-inicial {
+    width: 90%;
+}
+
+.grid-img-topo {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+}
