--- a/atividades/atividade005_bootstrap/css/estilo.css
+++ b/atividades/atividade005_bootstrap/css/estilo.css
@@ -19,11 +19,31 @@ body {
 }
 
 .card-inicial {
-    width: 90%;
+  width: 90%;
 }
 
 .grid-img-topo {
   width: 100%;
   height: 250px;
   object-fit: cover;
+}
+
+.comentarios { 
+  background-color: #44444404;
+}
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  filter: invert(1);
+}
+
+.banner-sobre {
+  background-color: black;
+  color: white;
+}
+
+.valores {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
